fixed overflow of hidden

--- a/index.css
+++ b/index.css
@@ -1,16 +1,12 @@
 /* Canvas */
 * {
     user-select: none;
-  }
-  body {
-    font-family: 'Oswald', sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box; 
-      cursor: url("https://cdn.icon-icons.com/icons2/2249/PNG/512/cursor_default_gesture_outline_icon_139700.png"), auto;
   }
-  
-  .video-container {
+  body {
+    font-family: 'Oswald', sans-serif;
     position: relative;
     height: 100vh;
     width: 100%;
@@ -18,6 +14,7 @@
     justify-content: center;
     align-items: center;
   }
+  
   .myVideo {
     height: 100%;
     width: 100%;
@@ -236,11 +233,12 @@
   font-size: 0.5rem;
 
 }
+}
   
   @media screen and (max-width: 669px) {
-
      .description {
   font-size: 1rem;
+  margin: 0.5rem;
   }
     
     .card-buttons,
@@ -264,4 +262,3 @@
       font-size: 1rem;
     }
   }
-}
